refactor tests, logs, swagger, readme
